@@ -37,7 +37,6 @@ NOTE: sorry, this is very raw :)
 
  * add new tools, that allow adding notes without dragging (and resizing without keyboard, and selecting, and...?)
  * add triplet as a widget, not as a check menu
- * use note icons instead of e.g. "1/8" as text
 
  * "track play position" default value should be in preferences
  * Add "pause" button
